# libracity

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  index.html
.github/workflows/: ci.yaml
assets/: config.json  levels.json
assets/audio/: ambient1.txt  ambient2.txt
assets/fonts/mochiy_pop_one/: OFL.txt
assets/models/: chieftain_hut.glb  chieftain_hut.gltf  hut.glb  hut.gltf
models/: chieftain_hut.blend  hut.blend
src/: boot.rs  config.rs  error.rs  game.rs  inventory.rs  level.rs  loader.rs  main.rs  mainmenu.rs  serialize.rs  text_asset.rs
