[package]
name = "libracity"
version = "0.1.0"
edition = "2018"
description = "Libra City: city planning on a needle"
keywords = ["game", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]
native = [
  "bevy/bevy_wgpu",
  "bevy_kira_audio/mp3",
]
web = [
  "bevy_webgl2"
]

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_kira_audio = { version = "0.6" }
bevy_prototype_debug_lines = "0.3"
bevy-inspector-egui = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_webgl2 = { version="0.5", optional=true }
wasm-bindgen = "0.2.69"
console_error_panic_hook = "0.1"
