[package]
name = "libracity"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Libra City: city planning on a needle"
keywords = ["game", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"

[features]
default = [
  "native",
]
shared = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]
native = [
  "shared",
  "bevy_kira_audio/mp3",
]
web = [
  "shared",
]

[dependencies]
bevy = { version = "0.6", default-features = false }
bevy_kira_audio = "0.8"
#bevy_prototype_debug_lines = "0.3"
bevy-inspector-egui = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.4"
parking_lot = "0.11"
bevy_tweening = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.79"
console_error_panic_hook = "0.1"
